--- a/HandmadeCity/Views/Account/Login.cshtml
+++ b/HandmadeCity/Views/Account/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Collections.Generic
 @using System.Linq
+@using HandmadeCity.Data.Entities
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @model LoginViewModel
