--- a/HandmadeCity/Views/Account/ForgotPassword.cshtml
+++ b/HandmadeCity/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ForgotPasswordViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
