--- a/HandmadeCity/Views/Account/LoginWithRecoveryCode.cshtml
+++ b/HandmadeCity/Views/Account/LoginWithRecoveryCode.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoginWithRecoveryCodeViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.LoginWithRecoveryCodeViewModel
 @{
     ViewData["Title"] = "Recovery code verification";
 }
