--- a/HandmadeCity/Views/Account/ResetPassword.cshtml
+++ b/HandmadeCity/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ResetPasswordViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
