--- a/HandmadeCity/Views/Shared/Error.cshtml
+++ b/HandmadeCity/Views/Shared/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@model ErrorViewModel
+﻿@using HandmadeCity.ViewModels
+@model HandmadeCity.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
