--- a/HandmadeCity/Views/Account/ExternalLogin.cshtml
+++ b/HandmadeCity/Views/Account/ExternalLogin.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExternalLoginViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.ExternalLoginViewModel
 @{
     ViewData["Title"] = "Register";
 }
