--- a/HandmadeCity/Views/Account/Login.cshtml
+++ b/HandmadeCity/Views/Account/Login.cshtml
@@ -1,9 +1,10 @@
 ﻿@using System.Collections.Generic
 @using System.Linq
 @using HandmadeCity.Data.Entities
+@using HandmadeCity.ViewModels.Account
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model LoginViewModel
+@model HandmadeCity.ViewModels.Account.LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
