--- a/HandmadeCity/Views/Account/LoginWith2fa.cshtml
+++ b/HandmadeCity/Views/Account/LoginWith2fa.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoginWith2faViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.LoginWith2faViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
 }
