--- a/HandmadeCity/Views/Account/Register.cshtml
+++ b/HandmadeCity/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model RegisterViewModel
+﻿@using HandmadeCity.ViewModels.Account
+@model HandmadeCity.ViewModels.Account.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
