--- a/HandmadeCity/Views/Shared/_Layout.cshtml
+++ b/HandmadeCity/Views/Shared/_Layout.cshtml
@@ -23,9 +23,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="Add">Добавить Товар</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
