--- a/HandmadeCity/Views/Manage/ChangePassword.cshtml
+++ b/HandmadeCity/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model ChangePasswordViewModel
+﻿@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
