--- a/HandmadeCity/Views/Manage/EnableAuthenticator.cshtml
+++ b/HandmadeCity/Views/Manage/EnableAuthenticator.cshtml
@@ -1,4 +1,5 @@
-﻿@model EnableAuthenticatorViewModel
+﻿@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.EnableAuthenticatorViewModel
 @{
     ViewData["Title"] = "Enable authenticator";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
