--- a/HandmadeCity/Views/Manage/ExternalLogins.cshtml
+++ b/HandmadeCity/Views/Manage/ExternalLogins.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExternalLoginsViewModel
+﻿@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.ExternalLoginsViewModel
 @{
     ViewData["Title"] = "Manage your external logins";
     ViewData.AddActivePage(ManageNavPages.ExternalLogins);
