--- a/HandmadeCity/Views/Manage/SetPassword.cshtml
+++ b/HandmadeCity/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model SetPasswordViewModel
+﻿@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set password";
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
