--- a/HandmadeCity/Views/Manage/ShowRecoveryCodes.cshtml
+++ b/HandmadeCity/Views/Manage/ShowRecoveryCodes.cshtml
@@ -1,4 +1,5 @@
-﻿@model ShowRecoveryCodesViewModel
+﻿@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.ShowRecoveryCodesViewModel
 @{
     ViewData["Title"] = "Recovery codes";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
