--- a/HandmadeCity/Views/Manage/TwoFactorAuthentication.cshtml
+++ b/HandmadeCity/Views/Manage/TwoFactorAuthentication.cshtml
@@ -1,4 +1,5 @@
-@model TwoFactorAuthenticationViewModel
+@using HandmadeCity.ViewModels.Manage
+@model HandmadeCity.ViewModels.Manage.TwoFactorAuthenticationViewModel
 @{
     ViewData["Title"] = "Two-factor authentication";
     ViewData.AddActivePage(ManageNavPages.TwoFactorAuthentication);
