--- a/HandmadeCity/Views/Manage/_ManageNav.cshtml
+++ b/HandmadeCity/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-﻿@using HandmadeCity.Views.Manage
+﻿@using HandmadeCity.Data.Entities
+@using HandmadeCity.Views.Manage
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
