--- a/HandmadeCity/Views/Products/AddProduct.cshtml
+++ b/HandmadeCity/Views/Products/AddProduct.cshtml
@@ -5,9 +5,10 @@
 }
 
 <div class="container" >
-    <div class="center-block" >
-        <form method="post" asp-controller="Products" asp-action="Add" enctype="multipart/form-data">
-            <div class="col-md-4">
+    <div class="row" >
+        <div class="col-md-4 ">
+        <form method="post" asp-controller="Products" asp-action="AddProduct" enctype="multipart/form-data">
+            <div>
                 <div class="thumbnail">
                     <div class="caption">
                         <h4>
@@ -59,5 +60,6 @@
                 </div>
             </div>
         </form>
+        </div>
     </div>
 </div>
