--- a/HandmadeCity/Views/Shared/_Layout.cshtml
+++ b/HandmadeCity/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -25,9 +26,17 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
-                    <li><a asp-area="" asp-controller="Products" asp-action="Add">Добавить Товар</a></li>
+                    <li><a asp-area="" asp-controller="Products" asp-action="AddProduct">Добавить Товар</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a asp-area="" asp-controller="Cart" asp-action="Index">
+                            <span class="glyphicon glyphicon-shopping-cart" >@Context.Session.GetString("AmountOfProductsInCart")</span>
+                        </a>
+                    </li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
+
             </div>
         </div>
     </nav>
