--- a/HandmadeCity/Views/Purchase/Purchase.cshtml
+++ b/HandmadeCity/Views/Purchase/Purchase.cshtml
@@ -1,7 +1,6 @@
 ﻿@using HandmadeCity.ViewModels.Cart
-@model HandmadeCity.ViewModels.Cart.CartListViewModel
 @{
-    ViewData["Title"] = "Корзина";
+    ViewData["Title"] = "Покупка";
 }
 
 <div class="container">
