--- a/HandmadeCity/Views/Shared/_Layout.cshtml
+++ b/HandmadeCity/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
                     <li><a asp-area="" asp-controller="Products" asp-action="AddProduct">Добавить Товар</a></li>
+                    <li><a asp-area="" asp-controller="Purchase" asp-action="Index">История Покупок</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
