--- a/HandmadeCity/Views/Shared/_LoginPartial.cshtml
+++ b/HandmadeCity/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-@using HandmadeCity.Data.Entities
+﻿@using HandmadeCity.Data.Entities
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> SignInManager
@@ -20,7 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
     </ul>
 }
