--- a/HandmadeCity/Views/Home/Index.cshtml
+++ b/HandmadeCity/Views/Home/Index.cshtml
@@ -1,57 +1,33 @@
 ﻿@model HandmadeCity.ViewModels.Home.IndexViewModel
  
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Главная";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/carousel/car1.jpg" alt="ASP.NET" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
+                    BlaBlaBla. 
+                    <a class="btn btn-default" href="#">
+                        Some Info
                     </a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/carousel/car2.jpg" alt="Visual Studio" />
             <div class="carousel-caption" role="option">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
+                    BlaBlaBla.
+                    <a class="btn btn-default" href="#">
+                        Some Info
                     </a>
                 </p>
             </div>
@@ -75,7 +51,7 @@
         <ul>
             @foreach (var category in topic.Categories) {
 
-                <li><a btn btn-link asp-controller="Products" asp-action="GetByCategory"  asp-route-categoryId="@category.Id">@category.Name</a></li>
+                <li><a btn btn-link asp-controller="Product" asp-action="GetByCategory"  asp-route-categoryId="@category.Id">@category.Name</a></li>
             }
         </ul>
     </div>
