--- a/HandmadeCity/Views/Purchase/Index.cshtml
+++ b/HandmadeCity/Views/Purchase/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@model HandmadeCity.ViewModels.Purchases.PurchaseHistoryViewModel
+﻿@model HandmadeCity.ViewModels.Purchases.PurchasesViewModel
 @{
     ViewData["Title"] = "История Покупок";
 }
 
 <div class="container">
-    <br /> <br /> <br />
     @foreach (var purchase in Model.Purchases)
     {
         <div class="col-md-4" >
