--- a/HandmadeCity/Views/Shared/_Layout.cshtml
+++ b/HandmadeCity/Views/Shared/_Layout.cshtml
@@ -24,13 +24,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">О Нас</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
                     @if (User.IsInRole("Admin"))
                     {
-                        <li><a asp-area="" asp-controller="Products" asp-action="AddProduct">Добавить Товар</a></li>
+                        <li><a asp-area="" asp-controller="Product" asp-action="AddProduct">Добавить Товар</a></li>
                     }
-                    <li><a asp-area="" asp-controller="Purchase" asp-action="Index">История Покупок</a></li>
+                    @if (User.IsInRole("User"))
+                    {
+                        <li><a asp-area="" asp-controller="Purchase" asp-action="Index" >История Покупок</a></li>
+                    }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -45,6 +48,7 @@
         </div>
     </nav>
     <div class="container body-content">
+        <br /> <br /> <br />
         @RenderBody()
         <hr />
         <footer>
